--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -4440,6 +4440,402 @@ p.overview__love-stat-timer {
   }
 }
 
+/*! login */
+
+.login {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 31rem;
+  padding-bottom: 12rem;
+  background-color: var(--c60);
+  font-size: 14rem;
+  overflow-x: hidden;
+}
+
+.login__pcBg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: none;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.login__wrapper {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  background-color: var(--c60);
+}
+
+.login__logo {
+  position: relative;
+  display: block;
+  width: 258rem;
+}
+
+.login__logoWrapper {
+  position: relative;
+  margin-bottom: 32rem;
+}
+
+.login__logoWrapper::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-2deg);
+  display: block;
+  width: 110vw;
+  height: 50rem;
+  content: '';
+  background-color: var(--c30);
+}
+
+.login__title {
+  margin: 0;
+  margin-bottom: 30rem;
+  font-size: 14rem;
+  line-height: 18rem;
+  text-align: center;
+  font-weight: 400;
+}
+
+.login__title span {
+  color: var(--c10two);
+}
+
+.login__text {
+  margin: 0;
+  margin-bottom: 30rem;
+  font-size: 14rem;
+  line-height: 18rem;
+  text-align: center;
+}
+
+.login__links {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 40rem;
+  padding: 0 24rem;
+}
+
+.login__links span {
+  z-index: 1;
+  position: relative;
+  font-size: 24rem;
+  line-height: 1;
+  color: var(--c10two);
+}
+
+.login__links a {
+  z-index: 1;
+  position: relative;
+  display: block;
+  width: 100rem;
+  height: 100rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.login__links a:hover {
+  filter: drop-shadow(0 0 5rem var(--c10two));
+}
+
+.login__links svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+.login__links::before {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(-2deg);
+  display: block;
+  width: 110vw;
+  height: 50rem;
+  content: '';
+  background-color: var(--c30);
+}
+
+.login__rights,
+.login__pcRights {
+  font-size: 10rem;
+  line-height: 12rem;
+  text-align: center;
+  color: var(--c10two);
+}
+
+.login__pcRights {
+  display: none;
+}
+
+.login__rights a,
+.login__pcRights a {
+  text-decoration: underline;
+  color: inherit;
+}
+
+.map-bg {
+  height: auto;
+  overflow-y: initial;
+  overflow-x: hidden;
+}
+
+@media (min-width: 1200px) {
+  .map-bg {
+    min-height: 100vh;
+    padding: 0;
+  }
+  .login {
+    padding-top: 60rem;
+    padding-bottom: 30rem;
+    background-color: transparent;
+    min-height: 100vh;
+    font-size: 16rem;
+  }
+  .login__pcBg {
+    display: block;
+  }
+  .login__wrapper {
+    margin-bottom: 40rem;
+    width: 785rem;
+    padding-bottom: 10rem;
+    border: 1px solid var(--c30);
+  }
+  .login__title {
+    margin-bottom: 20rem;
+  }
+  .login__logoWrapper {
+    width: calc(100% + 2px);
+    height: 120rem;
+    overflow-x: hidden;
+    margin-top: -50rem;
+    margin-left: -1px;
+    margin-bottom: 5rem;
+  }
+  .login__logo {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: block;
+    width: 258rem;
+    height: 59rem;
+    background-color: var(--c30);
+  }
+  .login__text {
+    font-size: 16rem;
+  }
+  .login__links {
+    overflow-x: hidden;
+    height: 171rem;
+    padding: 10rem 150rem;
+    margin-bottom: 20rem;
+  }
+  .login__links a {
+    width: 150rem;
+    height: 150rem;
+  }
+  .login__links span {
+    font-size: 30rem;
+  }
+  .login__rights {
+    display: none;
+  }
+  .login__pcRights {
+    display: block;
+  }
+  br.noPC {display: none;}
+}
+
+/*! lSlider */
+
+.lSlider {
+  position: relative;
+  margin-bottom: 20rem;
+  width: 100%;
+  overflow-x: hidden;
+}
+
+.lSlider__list {
+  display: flex;
+  gap: 18rem;
+  margin: 0;
+  padding: 0 12rem;
+  padding-bottom: 20rem;
+  list-style: none;
+  width: 100%;
+  overflow-x: auto;
+}
+
+.lSlider__item {
+  flex-shrink: 0;
+}
+
+.lSlider__btn {
+  display: block;
+  width: 91rem;
+  height: 204rem;
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.lSlider__img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  border: 2px solid var(--c10two);
+}
+
+@media (min-width: 1200px) {
+  .lSlider {
+    margin-bottom: 0;
+    overflow: initial;
+  }
+  .lSlider__btn {
+    width: 340rem;
+    height: 192rem;
+  }
+  .lSlider__list {
+    display: flex;
+    gap: 46rem;
+    width: max-content;
+    margin: 0 auto;
+    padding: 0;
+  }
+  .lSlider__btn:hover {
+    filter: drop-shadow(0 0 10rem var(--c10two));
+  }
+}
+
+/*! popupSlider */
+
+.popupSlider {
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  pointer-events: none;
+  background-color: var(--c60);
+  transition: opacity 0.5s ease;
+}
+
+.popupSlider button {
+  cursor: pointer;
+}
+
+.popupSlider.active {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.popupSlider__list {
+  display: flex;
+  transition: all 0.5s ease;
+  padding-left: 0;
+  list-style: none;
+  height: 100%;
+  margin: 0;
+}
+
+.popupSlider__item {
+  flex-shrink: 0;
+  width: 100vw;
+}
+
+.popupSlider__item picture {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+}
+
+.popupSlider__item img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  object-position: center;
+}
+
+.popupSlider__close {
+  position: absolute;
+  top: 20rem;
+  right: 20rem;
+  width: 40rem;
+  height: 40rem;
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+}
+
+.popupSlider__close svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+  filter: drop-shadow(0 0 5rem #000);
+}
+
+.popupSlider__left {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%) scaleX(-1);
+  left: 12rem;
+  width: 40rem;
+  height: 40rem;
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+}
+
+.popupSlider__right {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 12rem;
+  width: 40rem;
+  height: 40rem;
+  padding: 0;
+  background-color: transparent;
+  border: 0;
+}
+
+.popupSlider__left svg,
+.popupSlider__right svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+  filter: drop-shadow(0 0 5rem #000);
+}
+
+.popupSlider__left:disabled,
+.popupSlider__right:disabled {
+  opacity: 0.5;
+  filter: grayscale(1);
+  filter: drop-shadow(0 0 0 #fff);
+}
+
 /*! ct__btn-half-screen */
 
 .ct__btn-half-screen {
