--- a/factory/templates/factory/redesign/factory.html
+++ b/factory/templates/factory/redesign/factory.html
@@ -138,20 +138,87 @@
           class="factory__topInput" oninput="setInputValue(this.value)">
       </label>
 
-      <button disabled id="accept" type="submit" class="factory__topCreate ct__mid-btn">
-        <svg width="144" height="30" viewBox="0 0 144 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <mask id="mask0_259_319" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144" height="30">
-            <path d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z" fill="var(--c10two)"/>
-          </mask>
-          <g mask="url(#mask0_259_319)">
-            <path d="M0 5.76917L5.76923 -6.10352e-05H144V23.0769L137.077 29.9999H0V5.76917Z" fill="var(--c10two)"/>
-            <path class="treg1" opacity="0.15" d="M109.266 13.4468L125.407 3.59524L125.868 22.4997L109.266 13.4468Z" fill="var(--c10one)"/>
-            <path class="treg2" opacity="0.15" d="M95.6185 -3.53072L103.36 25.3596L74.4694 17.6185L95.6185 -3.53072Z" fill="var(--c10one)"/>
-            <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
-          </g>
-        </svg>
-        <span>{% trans 'создать' context "factory" %}</span>
-      </button>
+      <div style="display: flex; justify-content: center; gap: 8rem;">
+            <style>
+            .factory__topCreate:disabled {
+              filter: grayscale(1);
+              cursor: auto;
+            }
+            </style>
+          {% if player.destination %}
+          <button disabled class="factory__topCreate ct__mid-btn">
+            <svg width="144" height="30" viewBox="0 0 144 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <mask id="mask0_259_319" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144" height="30">
+                <path d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z" fill="var(--c10two)"/>
+              </mask>
+              <g mask="url(#mask0_259_319)">
+                <path d="M0 5.76917L5.76923 -6.10352e-05H144V23.0769L137.077 29.9999H0V5.76917Z" fill="var(--c10two)"/>
+                <path class="treg1" opacity="0.15" d="M109.266 13.4468L125.407 3.59524L125.868 22.4997L109.266 13.4468Z" fill="var(--c10one)"/>
+                <path class="treg2" opacity="0.15" d="M95.6185 -3.53072L103.36 25.3596L74.4694 17.6185L95.6185 -3.53072Z" fill="var(--c10one)"/>
+                <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
+              </g>
+            </svg>
+            <span>{% trans 'в полете' context "daily_header" %}</span>
+          </button>
+          {% else %}
+            {% if premium %}
+          <button disabled class="factory__topCreate ct__mid-btn start_auto" onclick="start_auto(event)" style="{% if auto %}display:none{% endif %}">
+            <svg width="144" height="30" viewBox="0 0 144 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <mask id="mask0_259_319" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144" height="30">
+                <path d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z" fill="var(--c10two)"/>
+              </mask>
+              <g mask="url(#mask0_259_319)">
+                <path d="M0 5.76917L5.76923 -6.10352e-05H144V23.0769L137.077 29.9999H0V5.76917Z" fill="var(--c10two)"/>
+                <path class="treg1" opacity="0.15" d="M109.266 13.4468L125.407 3.59524L125.868 22.4997L109.266 13.4468Z" fill="var(--c10one)"/>
+                <path class="treg2" opacity="0.15" d="M95.6185 -3.53072L103.36 25.3596L74.4694 17.6185L95.6185 -3.53072Z" fill="var(--c10one)"/>
+                <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
+              </g>
+            </svg>
+            <span>{% trans 'авто' context "mining" %}</span>
+          </button>
+          <button class="cancel_auto ct__mid-btn" onclick="cancel_auto(event)" style="{% if not auto %}display:none{% endif %}">
+            <svg width="144" height="30" viewBox="0 0 144 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <mask id="mask0_259_319" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144" height="30">
+                <path d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z" fill="var(--c10two)"/>
+              </mask>
+              <g mask="url(#mask0_259_319)">
+                <path d="M0 5.76917L5.76923 -6.10352e-05H144V23.0769L137.077 29.9999H0V5.76917Z" fill="var(--c10two)"/>
+                <path class="treg1" opacity="0.15" d="M109.266 13.4468L125.407 3.59524L125.868 22.4997L109.266 13.4468Z" fill="var(--c10one)"/>
+                <path class="treg2" opacity="0.15" d="M95.6185 -3.53072L103.36 25.3596L74.4694 17.6185L95.6185 -3.53072Z" fill="var(--c10one)"/>
+                <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
+              </g>
+            </svg>
+            <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg" style="
+                                                                                                                position: static;
+                                                                                                                width: 14rem;
+                                                                                                                height: 14rem;
+                                                                                                                display: block;
+                                                                                                                margin-right: 6rem;
+                                                                                                                margin-top: -2rem;
+                                                                                                                z-index: 0;
+                                                                                                            ">
+						<circle cx="7" cy="7" r="6.5" stroke="var(--c60)"></circle>
+						<path d="M7 2.24V7.07L10.71 10.78" stroke="var(--c60)"></path>
+					</svg>
+            <span>{{ auto.task.start_time|timezone:player.time_zone|date:"H:i" }}</span>
+          </button>
+            {% endif %}
+          <button disabled id="accept" type="submit" class="factory__topCreate ct__mid-btn">
+            <svg width="144" height="30" viewBox="0 0 144 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <mask id="mask0_259_319" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="144" height="30">
+                <path d="M0 5.76923L5.76923 0H144V23.0769L137.077 30H0V5.76923Z" fill="var(--c10two)"/>
+              </mask>
+              <g mask="url(#mask0_259_319)">
+                <path d="M0 5.76917L5.76923 -6.10352e-05H144V23.0769L137.077 29.9999H0V5.76917Z" fill="var(--c10two)"/>
+                <path class="treg1" opacity="0.15" d="M109.266 13.4468L125.407 3.59524L125.868 22.4997L109.266 13.4468Z" fill="var(--c10one)"/>
+                <path class="treg2" opacity="0.15" d="M95.6185 -3.53072L103.36 25.3596L74.4694 17.6185L95.6185 -3.53072Z" fill="var(--c10one)"/>
+                <path class="treg3" opacity="0.15" d="M22.6079 -8.73057L72.591 7.62749L33.433 42.7351L22.6079 -8.73057Z" fill="var(--c10one)"/>
+              </g>
+            </svg>
+            <span>{% trans 'создать' context "factory" %}</span>
+          </button>
+          {% endif %}
+      </div>
 
     </form>
 
@@ -178,4 +245,7 @@
 
 {% block for_scripts_and_css %}
 <script src='{% static "redesign/js/factory.js" %}?{{ csrf_token }}'></script>
+{% if premium %}
+<script src='{% static "redesign/js/auto_produce.js" %}?{{ csrf_token }}'></script>
+{% endif %}
 {% endblock %}
