фикс отсутствия скролла в активах

--- a/player/static/redesign/css/style.css
+++ b/player/static/redesign/css/style.css
@@ -2016,7 +2016,7 @@ a {
 
 @media (min-width: 1200px) {
   .actives {
-    height: initial;
+    height: calc(100% - 100rem);
     margin-left: 330rem;
     margin-top: 100rem;
   }
