--- a/state/templates/state/gov/parliament.html
+++ b/state/templates/state/gov/parliament.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load l10n %}{% load i18n %}
 {% load dict_key %}
 <div id="parliament" class="tab-pane fade">
     <div class="progress" align="right">
