скролл трейдинга для нищебродов

--- a/storage/templates/storage/redesign/trading/trading.html
+++ b/storage/templates/storage/redesign/trading/trading.html
@@ -106,7 +106,7 @@
 	</section>
 
   <!--МОДАЛЬНЫЕ НАСТРОЙКИ ПОИСКА-->
-  <form class="search-modal movable" id="offers_search_form" role="form">
+  <form class="search-modal movable custom-scroll" id="offers_search_form" role="form">
     <div class="search-modal__wrapper">
       <!--Кнопка закрытия модалки-->
       <button class="m-sett__close ct__square-mid-btn" id="closeSearch">
@@ -191,7 +191,7 @@
   </form>
 
   <!--МОДАЛЬНЫЕ создание товара-->
-  <section class="search-modal movable" id="search-create">
+  <section class="search-modal movable custom-scroll" id="search-create">
     <form id="new_offer_form" role="form" class="search-modal__wrapper">
       <!--Кнопка закрытия модалки-->
       <button class="m-sett__close ct__square-mid-btn" id="closeCreate">
@@ -311,7 +311,7 @@
   </section>
 
   <!--МОДАЛЬНая покупка-->
-  <section class="search-modal movableLeft" id="search-buy">
+  <section class="search-modal movableLeft custom-scroll" id="search-buy">
     <div class="search-modal__wrapper search-modal__wrapper--buy">
       <!--Кнопка закрытия модалки-->
       <button class="m-sett__close ct__square-mid-btn" onclick="toggleActiveClass('search-buy')">
