--- a/player/templates/player/index.html
+++ b/player/templates/player/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% load static %}
 {% load socialaccount %}
+{% load l10n %}{% load i18n %}{% load tz %}
 <html lang="ru-ru">
 <head>
   <meta charset="UTF-8">
@@ -68,7 +69,7 @@
         </svg>
       </div>
 
-      <h1 class="login__title"><span>Wild Politics</span> - это экономико-политический симулятор</h1>
+      <h1 class="login__title"><span>Wild Politics</span> - {% trans 'это экономико-политический симулятор' context "index" %}</h1>
 
       <div class="login__links">
         <a href="{% provider_login_url 'vk' %}"><!--VK-->
@@ -77,7 +78,7 @@
             <path d="M50 0C22.4292 0 0 22.4292 0 50C0 77.5708 22.4292 100 50 100C77.5708 100 100 77.5708 100 50C100 22.4292 77.5708 0 50 0ZM50 2.77778C76.0389 2.77778 97.2222 23.9611 97.2222 50C97.2222 76.0389 76.0389 97.2222 50 97.2222C23.9611 97.2222 2.77778 76.0389 2.77778 50C2.77778 23.9611 23.9611 2.77778 50 2.77778ZM50 6.94444C26.2583 6.94444 6.94444 26.2597 6.94444 50C6.94444 73.7403 26.2583 93.0556 50 93.0556C73.7417 93.0556 93.0556 73.7403 93.0556 50C93.0556 37.8889 87.911 26.2707 78.9388 18.1207C78.6569 17.8637 78.2192 17.8834 77.9595 18.1668C77.7012 18.4515 77.7209 18.8904 78.0056 19.1488C86.6876 27.0349 91.6667 38.2792 91.6667 50C91.6667 72.975 72.975 91.6667 50 91.6667C27.025 91.6667 8.33333 72.975 8.33333 50C8.33333 27.025 27.025 8.33333 50 8.33333C54.9319 8.33333 59.7571 9.18503 64.3446 10.867C64.7043 11.0003 65.1051 10.8158 65.2371 10.4546C65.369 10.0935 65.1832 9.69683 64.822 9.56489C60.0818 7.82739 55.0944 6.94444 50 6.94444ZM68.7907 11.3118C68.5212 11.296 68.2542 11.4377 68.1261 11.697C67.9566 12.0415 68.0977 12.4567 68.4408 12.6275C69.3685 13.0858 70.2863 13.5823 71.1724 14.1059C71.2835 14.1726 71.4069 14.2036 71.5278 14.2036C71.7653 14.2036 71.9954 14.0825 72.1246 13.8645C72.319 13.5339 72.2096 13.1082 71.8804 12.9123C70.9651 12.3693 70.0135 11.856 69.0565 11.3824C68.9715 11.3407 68.8805 11.3171 68.7907 11.3118ZM74.1862 14.6186C74.0112 14.649 73.8483 14.7451 73.7386 14.9034C73.5178 15.2173 73.5929 15.651 73.9068 15.8719C74.3693 16.1969 74.824 16.5271 75.2713 16.8701C75.3977 16.9659 75.5472 17.0139 75.6944 17.0139C75.9028 17.0139 76.1103 16.9204 76.2478 16.7426C76.4798 16.4371 76.4232 16.0007 76.1176 15.7688C75.6537 15.4146 75.1835 15.0673 74.7043 14.7325C74.5474 14.6235 74.3612 14.5882 74.1862 14.6186ZM23.6816 33.3333C22.7558 33.3333 22.0421 33.5766 21.6037 34.0712C21.1654 34.5657 21.091 35.1772 21.091 35.6771C21.091 36.1902 21.2074 36.9957 21.4844 38.17C21.7614 39.3444 22.202 40.8506 22.8624 42.608C24.1832 46.1226 26.3846 50.6403 29.9127 55.4687C35.0673 62.5214 41.8824 66.6667 48.0957 66.6667C49.9414 66.6667 51.0592 66.4706 51.8229 65.8963C52.5867 65.3219 52.7289 64.4115 52.7289 63.642V57.3161V57.3134C52.7308 56.516 52.8517 56.0559 52.9541 55.9001C53.0567 55.7439 53.1192 55.6966 53.5645 55.6966C53.7254 55.6966 54.2356 55.8209 55.0863 56.4534C55.9369 57.086 57.1211 58.1987 58.6968 60.0369C60.5164 62.159 61.5826 63.7283 62.5163 64.8383C63.45 65.9484 64.4047 66.6694 65.6901 66.6694H71.2646C72.009 66.6694 72.6551 66.5122 73.1228 66.0834C73.5905 65.6547 73.7699 65.0308 73.7874 64.3962V64.3934C73.7965 64.0449 73.7468 63.6818 73.6464 63.2975L73.6409 63.2758L73.6328 63.2514C73.1501 61.8162 71.4898 58.8681 69.0755 55.9489V55.9462C67.743 54.3367 66.2097 52.7198 65.701 51.9911L65.6982 51.9884L65.6955 51.983C65.3385 51.4853 65.2856 51.2652 65.2941 51.1013C65.3028 50.924 65.4291 50.6395 65.7308 50.1248L65.7362 50.1139C65.7341 50.1173 65.7369 50.1138 65.7444 50.1004C65.7519 50.0887 65.7634 50.0719 65.7823 50.0434C65.8291 49.9733 65.9032 49.8645 65.9993 49.7233C66.1917 49.4409 66.4704 49.0296 66.8104 48.527C67.4905 47.5219 68.4124 46.145 69.3576 44.6587C70.3028 43.1725 71.2716 41.5774 72.0567 40.1259C72.8356 38.686 73.4298 37.4263 73.6437 36.4149C73.7673 35.9864 73.7621 35.6004 73.7495 35.3299C73.7306 34.8753 73.6441 34.3463 73.2476 33.9274C72.8513 33.5088 72.2477 33.3333 71.5196 33.3333H65.9451C65.101 33.3333 64.4023 33.6085 63.8997 34.0251C63.3972 34.4416 63.0888 34.9688 62.8743 35.4519C62.8565 35.4885 59.4058 42.5473 55.5094 47.1408C54.8928 47.7869 54.4348 48.1758 54.1097 48.3751C53.8134 48.5567 53.6408 48.5956 53.4342 48.603C53.42 48.5983 53.4121 48.5985 53.3908 48.584C53.3166 48.5334 53.2072 48.4361 53.106 48.3073C52.9036 48.0498 52.7317 47.6789 52.7317 47.2304V36.1871C52.7317 35.3905 52.6567 34.7212 52.2786 34.1634C51.9005 33.6057 51.2052 33.3333 50.4774 33.3333H40.842C40.2265 33.3333 39.6756 33.602 39.3311 34.0006C38.9865 34.3993 38.8292 34.8977 38.8292 35.3923C38.8292 36.3031 39.2203 36.8769 39.5318 37.5841C39.8433 38.2913 40.1726 39.2528 40.2778 41.173V48.8498C40.2778 49.568 40.2662 49.7663 40.2642 49.9349C40.1103 49.9026 39.6989 49.7312 39.1466 49.1455C38.5478 48.5105 37.8458 47.5334 37.1229 46.2891C35.6773 43.8003 34.1346 40.2427 32.8993 36.103L32.8966 36.0948L32.8939 36.0867C32.6106 35.222 32.3168 34.546 31.7952 34.0468C31.2737 33.5475 30.5537 33.3333 29.7472 33.3333H23.6816ZM23.6816 34.7222H29.7472C30.3476 34.7222 30.5988 34.8217 30.835 35.0477C31.0711 35.2738 31.3187 35.7342 31.5755 36.518C32.8379 40.7437 34.408 44.3764 35.9239 46.9862C36.6831 48.2931 37.4255 49.3453 38.1375 50.1004C38.8495 50.8554 39.5178 51.3889 40.3592 51.3889C40.53 51.3889 40.6816 51.4156 40.9478 51.3373C41.2141 51.2591 41.5231 50.9213 41.5961 50.6673C41.7423 50.1593 41.6667 49.7755 41.6667 48.8498V41.116V41.097C41.5538 39.0366 41.1596 37.8386 40.8013 37.0253C40.4431 36.212 40.2181 35.9022 40.2181 35.3923C40.2181 35.2035 40.2857 35.0226 40.3836 34.9094C40.4814 34.7962 40.5908 34.7222 40.842 34.7222H50.4774C50.9399 34.7222 51.025 34.7893 51.1285 34.9419C51.232 35.0946 51.3428 35.5058 51.3428 36.1871V47.2304C51.3428 48.0318 51.6448 48.6963 52.0128 49.1645C52.1968 49.3986 52.3966 49.588 52.6069 49.7314C52.8172 49.8749 53.0182 50 53.3664 50C53.8285 50 54.3349 49.8654 54.8367 49.5578C55.3385 49.2502 55.8619 48.7868 56.5321 48.0821L56.5457 48.0686L56.5565 48.055C60.6594 43.224 64.133 36.0379 64.133 36.0379L64.1385 36.027L64.1439 36.0162C64.3086 35.6451 64.5154 35.3166 64.7841 35.0939C65.0527 34.8712 65.3809 34.7222 65.9451 34.7222H71.5196C72.0402 34.7222 72.1904 34.8286 72.2412 34.8823C72.292 34.9359 72.3475 35.0706 72.3606 35.3868V35.3895C72.3725 35.6441 72.3727 35.8413 72.3117 36.0406L72.3036 36.0731L72.2955 36.103C72.1533 36.7925 71.5958 38.0621 70.836 39.4667C70.0763 40.8713 69.1204 42.4458 68.1858 43.9155C67.2511 45.3851 66.3362 46.7495 65.6603 47.7485C65.3223 48.248 65.0456 48.6576 64.8519 48.9421C64.755 49.0843 64.6799 49.1931 64.6267 49.273C64.6001 49.3129 64.5782 49.3453 64.5589 49.3761C64.5514 49.388 64.5422 49.4039 64.5318 49.4222C64.5287 49.4276 64.5275 49.4285 64.5237 49.4358C64.5152 49.4513 64.4834 49.5267 64.483 49.528C64.4829 49.5281 64.4753 49.5584 64.4721 49.5741C64.1967 50.0459 63.9358 50.4783 63.9079 51.0308C63.8775 51.6161 64.128 52.1788 64.5671 52.7913V52.7941C65.2488 53.7683 66.7194 55.2817 68.004 56.8332C70.3094 59.6208 71.9561 62.6491 72.3063 63.6773C72.3746 63.9481 72.4059 64.1778 72.4013 64.3582C72.3896 64.7777 72.3002 64.9517 72.1842 65.058C72.0683 65.1644 71.8148 65.2805 71.2646 65.2805H65.6901C64.8631 65.2805 64.4293 64.9532 63.5796 63.9431C62.73 62.933 61.6172 61.3087 59.7521 59.1336C58.1334 57.2453 56.8948 56.0661 55.9163 55.3385C54.9379 54.611 54.2146 54.3077 53.5645 54.3077C52.8722 54.3077 52.17 54.5641 51.7931 55.1378C51.4162 55.7115 51.3415 56.4079 51.3401 57.3134V63.642C51.3401 64.292 51.3004 64.5487 50.9874 64.7841C50.6746 65.0193 49.8236 65.2778 48.0957 65.2778C42.509 65.2778 35.995 61.4386 31.033 54.6495C27.5861 49.9321 25.4444 45.5255 24.1645 42.1197C23.5245 40.4168 23.1003 38.9622 22.838 37.8499C22.5757 36.7377 22.4799 35.932 22.4799 35.6771C22.4799 35.3242 22.5394 35.1101 22.6427 34.9935C22.746 34.8769 22.9825 34.7222 23.6816 34.7222Z" fill="#EB9929"/>
            </svg>
         </a>
-        <span>Играть</span>
+        <span>{% trans 'Играть' context "index" %}</span>
         <a href="{% provider_login_url 'google' %}"><!--Google-->
           <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
             <circle cx="50" cy="50" r="48.5" fill="#28353E" stroke="#EB9929" stroke-width="3"/>
@@ -87,15 +88,15 @@
       </div>
 
       <p class="login__text">
-        Объединяйтесь в партии для контроля государств. <br><br class="noPC">
-        Перекраивайте карту мира. <br><br class="noPC">
-        Создайте бизнес своей мечты - добыча ископаемых, промышленность, торговля. <br><br class="noPC">
-        Воюйте и заключайте союзы. <br><br class="noPC">
-        Расширяйте влияние своего государства. <br><br class="noPC">
-        Станьте владельцем популярной газеты, и заработайте на рекламе. <br><br class="noPC">
+        {% trans 'Объединяйтесь в партии для контроля государств.' context "index" %} <br><br class="noPC">
+        {% trans 'Перекраивайте карту мира.' context "index" %} <br><br class="noPC">
+        {% trans 'Создайте бизнес своей мечты - добыча ископаемых, промышленность, торговля.' context "index" %} <br><br class="noPC">
+        {% trans 'Воюйте и заключайте союзы.' context "index" %} <br><br class="noPC">
+        {% trans 'Расширяйте влияние своего государства.' context "index" %} <br><br class="noPC">
+        {% trans 'Станьте владельцем популярной газеты, и заработайте на рекламе.' context "index" %} <br><br class="noPC">
       </p>
 
-      <span class="login__pcRights">Продолжая использование сайта, вы принимаете условия <br> <a href="##">Пользовательского соглашения</a></span>
+      <span class="login__pcRights">{% trans 'Продолжая использование сайта, вы принимаете условия' context "index" %} <br> <a href="/eula">{% trans 'Пользовательского соглашения' context "index" %}</a></span>
     </div>
 
 
@@ -104,39 +105,39 @@
         <li class="lSlider__item">
           <button class="lSlider__btn">
             <picture>
-              <source media="(min-width: 1200px)" srcset="{% static 'img/index/scn_1.png' %}">
-              <img src="{% static 'img/index/mob_1.png' %}" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+              <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_1.png">
+              <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_1.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
             </picture>
           </button>
         </li>
         <li class="lSlider__item">
           <button class="lSlider__btn">
             <picture>
-              <source media="(min-width: 1200px)" srcset="{% static 'img/index/scn_2.png' %}">
-              <img src="{% static 'img/index/mob_2.png' %}" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+              <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_2.png">
+              <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_2.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
             </picture>
           </button>
         </li>
         <li class="lSlider__item">
           <button class="lSlider__btn">
             <picture>
-              <source media="(min-width: 1200px)" srcset="{% static 'img/index/scn_3.png' %}">
-              <img src="{% static 'img/index/mob_3.png' %}" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+              <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_3.png">
+              <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_3.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
             </picture>
           </button>
         </li>
         <li class="lSlider__item">
           <button class="lSlider__btn">
             <picture>
-              <source media="(min-width: 1200px)" srcset="{% static 'img/index/scn_4.png' %}">
-              <img src="{% static 'img/index/mob_4.png' %}" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+              <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_4.png">
+              <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_4.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
             </picture>
           </button>
         </li>
       </ul>
     </div>
 
-    <span class="login__rights">Продолжая использование сайта, вы принимаете условия <br> <a href="/eula">Пользовательского соглашения</a></span>
+    <span class="login__rights">{% trans 'Продолжая использование сайта, вы принимаете условия' context "index" %} <br> <a href="/eula">{% trans 'Пользовательского соглашения' context "index" %}</a></span>
 
   </section>
 
@@ -145,26 +146,26 @@
     <ul class="popupSlider__list" id="popupSlider__list">
       <li class="popupSlider__item">
         <picture>
-          <source media="(min-width: 1200px)" srcset="{% static 'img/index/scn_1.png' %}">
-          <img src="{% static 'img/index/mob_1.png' %}" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+          <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_1.png">
+          <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_1.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
         </picture>
       </li>
       <li class="popupSlider__item">
         <picture>
-          <source media="(min-width: 1200px)" srcset="{% static 'img/index/scn_2.png' %}">
-          <img src="{% static 'img/index/mob_2.png' %}" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+          <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_2.png">
+          <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_2.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
         </picture>
       </li>
       <li class="popupSlider__item">
         <picture>
-          <source media="(min-width: 1200px)" srcset="{% static 'img/index/scn_3.png' %}">
-          <img src="{% static 'img/index/mob_3.png' %}" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+          <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_3.png">
+          <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_3.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
         </picture>
       </li>
       <li class="popupSlider__item">
         <picture>
-          <source media="(min-width: 1200px)" srcset="{% static 'img/index/scn_4.png' %}">
-          <img src="{% static 'img/index/mob_4.png' %}" alt="Wildpolitics - скриншот игры" class="lSlider__img">
+          <source media="(min-width: 1200px)" srcset="/static/img/index/{% if lang %}{{ lang }}_{% endif %}scn_4.png">
+          <img src="/static/img/index/{% if lang %}{{ lang }}_{% endif %}mob_4.png" alt="Wildpolitics - скриншот игры" class="lSlider__img">
         </picture>
       </li>
     </ul>
