Revert "ссылка на группу игры вместо сообщения о мире"

--- a/player/templates/player/redesign/overview.html
+++ b/player/templates/player/redesign/overview.html
@@ -227,8 +227,7 @@
             </div>
             {% else %}
             <!--сообщение что войн нет-->
-<!--            <p class="overview__war-no">{% trans 'войн нет' %}</p>-->
-            <p class="overview__war-no" style="cursor: pointer" onclick="window.location.href = 'https://vk.com/wild_politics'">Группа игры VK</p>
+            <p class="overview__war-no">{% trans 'войн нет' %}</p>
             <!--иконка мира-->
             <svg class="overview__war-icon" width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
               <mask id="path-1-inside-1_758_442" fill="var(--c10one)">
