--- a/player/templates/player/index.html
+++ b/player/templates/player/index.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <link rel="icon" type="image/x-icon" href="{% static 'img/logo.ico' %}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="{% static 'redesign/css/style.css' %}">
   <title>Login Wild Politics</title>
