--- a/player/templates/player/redesign/header.html
+++ b/player/templates/player/redesign/header.html
@@ -12,6 +12,7 @@
 	<meta name="viewport"
 				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="icon" type="image/x-icon" href="{% static 'img/logo.ico' %}">
 	<title>{{ page_name }}</title>
 	<script
 	  src="https://code.jquery.com/jquery-3.6.0.min.js"
