--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -92,6 +92,7 @@
 						</defs>
 					</svg>
 				</button>
+				{% if False %}
 				{% if player.account.socialaccount_set.all.0.provider == 'vk' %}
 				<button class="profile__repost ct__square-btn"> <!-- кнопка перекл. на репост -->
 					<svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -111,6 +112,7 @@
 						</defs>
 					</svg>
 				</button>
+				{% endif %}
 				{% endif %}
 			</div>
 
@@ -288,12 +290,14 @@
 			</div>
 			<!-- конец ВКЛАДКИ ИНФОРМАЦИЯ -->
 
+			{% if False %}
 			{% if player.account.socialaccount_set.all.0.provider == 'vk' %}
 			<!-- ВКЛАДКА РЕПОСТ -->
 			<div class="profile__repost-tab">
 				{% repost_tab player %}
 			</div>
 			<!-- конец ВКЛАДКИ РЕПОСТ -->
+			{% endif %}
 			{% endif %}
 		</div>
 
