соглашение об обрабтке ПД

--- a/player/templates/player/index.html
+++ b/player/templates/player/index.html
@@ -97,7 +97,10 @@
         {% trans 'Станьте владельцем популярной газеты, и заработайте на рекламе.' context "index" %} <br><br class="noPC">
       </p>
 
-      <span class="login__pcRights">{% trans 'Продолжая использование сайта, вы принимаете условия' context "index" %} <br> <a href="/eula">{% trans 'Пользовательского соглашения' context "index" %}</a></span>
+      <span class="login__pcRights">{% trans 'Продолжая использование сайта, вы принимаете условия' context "index" %}
+        <br> <a href="/eula">{% trans 'Пользовательского соглашения' context "index" %}</a>
+        <br> <a href="/personal_data">и порядка обработки персональных данных</a>
+      </span>
     </div>
 
 
